# aubo_robot

aubo_robot_driver/: CMakeLists.txt  package.xml
aubo_robot_driver/config/: aubo_i5.yaml
aubo_robot_driver/include/aubo_robot_driver/: joint_controller_node.hpp
aubo_robot_driver/launch/: aubo_i5_joint_controller.launch.py  joint_controller.launch.py
aubo_robot_driver/scripts/: test_pose_goal.py
aubo_robot_driver/sdk/: CMakeLists.txt
aubo_robot_driver/src/: example_main.cpp  joint_controller_main.cpp  joint_controller_node.cpp
aubo_robot_ign/: CMakeLists.txt  README.md  package.xml
aubo_robot_ign/env-hooks/: ignition.dsv.in
aubo_robot_ign/launch/: aubo_i5_ign.launch.py  aubo_i5_move_group_server.launch.py  aubo_i5_moveit2_demo.launch.py  test.rviz
aubo_robot_ign/resource/aubo_i5_moveit_config/: aubo_i5.srdf  controllers.yaml  joint_limits.yaml  ompl_planning.yaml
aubo_robot_ign/resource/models/aubo_i5/: aubo_i5.def.xmacro  model.sdf  model.sdf.xmacro
aubo_robot_ign/resource/models/parallel_gripper/: model.config  model.sdf  model.sdf.xmacro  parallel_gripper.def.xmacro
aubo_robot_ign/resource/models/parallel_gripper/meshes/: finger.stl  gripper_base.stl
aubo_robot_ign/resource/urdf/: aubo_i5.urdf
aubo_robot_ign/resource/worlds/: test_world.sdf
aubo_robot_ign/resource/xmacro/: ur10_robotiq140_world.xmacro
aubo_robot_ign/scripts/: moveit2.py
